
0.10.2a Sep 09, 2009
 * added slapt_get_pkg_filelist() from Anders F. Bjorklund
 * normalize search routine when doing package lookups by details instead
   of just name and version.  This fixes a bug in gslapt that causes the
   package lookup to fail for two similar packages.

0.10.2 Aug 15, 2009
 * do not exit immediately if we cannot open the default slapt-getrc, check
   instead if --config was used, otherwise exit (thanks Vasileios Porpodas)
 * for consistency error out when --install is passed a package that
   does not exist (George)
 * updated conflict detection so that multiple conflicts are handled
   correctly (thanks Steve)
 * do not print empty strings as suggestions
 * free priority strings and resources when parsing is complete
 * updated Greek translation from George Vlahavas

0.10.1c Jul 12, 2009
 * updated default and example rc settings for slackware64
 * updated conflicts and suggests parsing to fix certain PACKAGES.TXT formatting

0.10.1b May 23, 2009
 * updated parsing of compressed and uncompressed sizes in
   /var/log/packages entries 
 * fixed handling of a plus sign in package location (path) in MD5
   (Ondrej Zary)
 * fixed small issues in FAQ#17 script

0.10.1a Apr 28, 2009
 * modernized script in FAQ#17. How do I create my own package source?
 * updated makefile for building the slapt-get package
 * updated MD5 parsing to accept new slackware MD5SUM metadata
   in /var/log/packages entries
 * disabled file size check since slack PACKAGES.TXT sizes
   are no longer accurate byte counts
 * added support for txz package extension
 * updated de translation from Manfred Mueller
 * updated pt_BR translation from Sergio Surkamp
 * moved slapt_pkg_version_parts out of public header

0.10.1 Dec 12, 2008
 * fixed an initialization errror in slapt_is_required_by() that
   caused a segfault when removing with --no-deps.
 * if no package sources are defined with a priority, disable use of