@@ -1,5 +1,6 @@
 
 0.10.2a Sep 09, 2009
+ * added --filelist option using slapt_get_pkg_filelist
  * added slapt_get_pkg_filelist() from Anders F. Bjorklund
  * normalize search routine when doing package lookups by details instead
    of just name and version.  This fixes a bug in gslapt that causes the
